# namespaceproject

./: .gitignore  Dockerfile  README.rst  pyproject.toml  setup.py  setup.py.ignore
deployment/core_b/: pyproject.toml
monorepo/core/: Dockerfile  setup.py
monorepo/core/scatpack/core/: main.py
monorepo/plugin_a/: pyproject.toml.ignore  setup.py
monorepo/plugin_a/scatpack/plugin_a/: __init__.py
monorepo/plugin_b/: Dockerfile  setup.py
sp_plugin_b/: __init__.py
spcore/: main.py
src/pkg_core/: Dockerfile  pyproject.toml  setup.py.ignore
src/pkg_core/scatpack/core/: __init__.py  config_dev.py  main.py  step_definitions.json
src/pkg_core/scatpack/core/models/: catalog.py  value_mapper_definitions.json
src/pkg_plugin_a/: Dockerfile  pyproject.toml  setup.py.ignore
src/pkg_plugin_a/scatpack/plugin/plugin_a/: __init__.py
src/pkg_plugin_a/scatpack/plugin/plugin_a/steps/: step_definitions.json  step_pa.py
src/pkg_plugin_b/: Dockerfile  pyproject.toml  setup.py.ignore
src/pkg_plugin_b/scatpack/plugin/plugin_b/: __init__.py
tests/: test_sampleproject.py
