[tool.poetry]
name = "scatpack.core"
version = "0.2.1"
description = ""
authors = ["Jason DeCorte <jason@spraoi.ai>"]
packages = [
    { include = "scatpack" },
]

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = { version = "~1.6", python = "~3.7" }

#[tool.poetry.dev-dependencies]
#pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
