[tool.poetry]
name = "scatpack.plugina"
version = "0.1.0"
description = ""
authors = ["Jason DeCorte <jason@spraoi.ai>"]
packages = [
    { include = "scatpack" },
]

[tool.poetry.dependencies]
python = "^3.7"
"scatpack.core" = { git = "https://jdecorte-spraoi:6tbH4^AXuHuz7qKe@github.com/jdecorte-spraoi/namespaceproject.git@f_wheels#subdirectory=src/pkg_core" }

#[tool.poetry.dev-dependencies]
#pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
