[tool.poetry]
name = "scatpack.plugina"
version = "0.1.0"
description = ""
authors = ["Jason DeCorte <jason@spraoi.ai>"]
packages = [
    { include = "scatpack" },
]

[tool.poetry.dependencies]
python = "^3.7"
#"scatpack.core" = { git = "https://github.com/jdecorte-spraoi/namespaceproject.git", branch = "master#src/pkg_core" }

#[tool.poetry.dev-dependencies]
#pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
