[tool.poetry]
name = "scatpack.pluginb"
version = "0.1.0"
description = ""
authors = ["Jason DeCorte <jason@spraoi.ai>"]
packages = [
    { include = "scatpack" },
]

[tool.poetry.dependencies]
python = "^3.7"
#"scatpack.core" = {path = "../pkg_core"}
importlib_metadata = { version = "~1.6", python = "~3.7" }

#[tool.poetry.dev-dependencies]
#pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
